add link to home page

--- a/recipes/bread-pudding.html
+++ b/recipes/bread-pudding.html
@@ -37,6 +37,7 @@
             <li>Add bread and mix until desired consistency is reached.</li>
             <li>Add mixture to a greased hotel pan and put in oven for about 40 minutes.</li>
         </ol>
+        <a href="../index.html">Home Page</a>
     </body>
 
 </html>
