create link to home page

--- a/recipes/caramel-sauce.html
+++ b/recipes/caramel-sauce.html
@@ -45,6 +45,7 @@
             <li>Once a simmer is achieved, add your salt and stir thoroughly to make sure it 
                 dissolves.</li>
         </ol>
+        <a href="../index.html">Home Page</a>
     </body>
 
 
